# starbreeder-sdk

./: LICENSE  README.md  pyproject.toml
src/starbreeder_module/: __init__.py  main.py  module.py  schemas.py
src/starbreeder_module/api/: main.py
src/starbreeder_module/api/routes/: config.py  evaluate.py  generate.py  initialize.py  utils.py
src/starbreeder_module/core/: config.py  module_config.py
src/starbreeder_sdk/: __init__.py  main.py  module.py  schemas.py
src/starbreeder_sdk/api/: __init__.py  main.py
src/starbreeder_sdk/api/routes/: __init__.py  config.py  evaluate.py  generate.py  health.py  initialize.py  utils.py
src/starbreeder_sdk/core/: __init__.py  config.py  module_config.py
