[project]
name = "starbreeder-sdk"
version = "0.1.0"
description = "Starbreeder Software Development Kit."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
	"fastapi",
	"uvicorn[standard]",
	"httpx",
	"pydantic",
	"pydantic-settings",
	"pyyaml",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"ruff",
	"mypy",
]
docs = [
	"mkdocs",
	"mkdocs-material",
	"mkdocstrings[python]",
	"mkdocs-jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 79

[tool.ruff.lint]
select = ["E", "D", "F", "I", "N", "SIM", "UP", "W"]
ignore = [
	"D203",  # incorrect-blank-line-before-class
	"D206",  # docstring-tab-indentation
	"D213",  # multi-line-summary-second-line
	"N803",  # non-lowercase-variable-in-function
	"N806",  # invalid-argument-name
	"W191",  # tab-indentation
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
	"F811",  # redefined-while-unused
]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
show_error_codes = "True"
warn_unused_ignores = "True"
